# NMIAI26

./: .gitattributes  .gitignore  .vercelignore  README.md  index.html  mcp.json  package-lock.json  package.json  pyproject.toml  tsconfig.json  vercel.json
api/: solve.ts
api/_lib/: attachments.ts  planner.ts  schemas.ts  task_spec.ts  tripletex.ts
apps/tripletex-api/: .vercelignore  README.md  dashboard.js  index.html  package.json  tsconfig.json  vercel.json
apps/tripletex-api/api/: health.ts  solve.ts
apps/tripletex-api/docs/: architecture.md  attachment-processing.md  automation.md  deployment.md  operations.md  submission.md
apps/tripletex-api/examples/: sample_request.json
apps/tripletex-api/tools/: mock_tripletex_server.ts  tripletex_acceptance_gates.ts  (+18 more)
challenges/astar-island/: .gitignore  README.md  client.py  historical_model_cache.json  run.py  watch.py
challenges/grocery-bot/: .env.example  .gitignore  README.md  pyproject.toml
challenges/grocery-bot/docs/: strategy.md  tuning-history.md  verification.md
challenges/grocery-bot/src/nmiai_bot/: __init__.py  main.py
challenges/grocery-bot/tests/: __init__.py  test_main.py
challenges/grocery-bot/tools/: tune_levels.py
challenges/norgesgruppen-data/: .gitignore  README.md
docs/: strategy_tuning_2026-03-19.md
src/nmiai_bot/: game_api.py  local_api.py  main.py  web.py
tests/: test_game_api.py  test_local_api.py  test_main.py  test_web.py
tools/: tripletex_acceptance_gates.ts
tripletex/: DEPLOY_VERCEL.md  FAILURE_FORENSICS_2026-03-20.md  HANDOVER.md  README.md
(+173 files in other folders)
