[project]
name = "nmiai26"
version = "0.1.0"
description = "Starter bot for the Norwegian AI Championship 2026 Grocery Bot challenge."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116,<1",
    "uvicorn>=0.35,<1",
    "websockets>=15,<16",
]

[project.scripts]
nmiai-bot = "nmiai_bot.main:main"
nmiai-web = "nmiai_bot.web:main"
nmiai-local = "nmiai_bot.local_api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/nmiai_bot"]
